# black-owned-businesses-ne

./: .gitignore  LICENSE  README.md  index.html  log.txt  test.py
app/black-owned-businesses/: package-lock.json  package.json
app/black-owned-businesses/public/: index.html
app/black-owned-businesses/src/: features.json  index.scss
app/black-owned-businesses/src/components/: ContactInformationSection.js  ImagePreview.js  PlaceDetailsPopup.js  TagSection.scss  WebsiteSection.js
black-owned-businesses/: package-lock.json  package.json
black-owned-businesses/src/: App.js
black-owned-businesses/src/components/: ContactInformationSection.scss  ImagePreview.js  ImagePreview.scss  Map.js  MenuSection.js  MenuSection.scss  PlaceDetailsPopup.scss  TagSection.js  WebsiteSection.scss
black-owned-businesses/src/ui/: Pill.js  Pill.scss
scrape_geometry/: __main__.py
scrape_geometry/util/: maps_driver.py
scripts/: README.md  pyproject.toml  test.py
scripts/scrape/: __main__.py
scripts/scrape/data/: businesses_db.csv  businesses_list.csv  new_england_black_owned_businesses.csv
scripts/scrape/util/: feature_collection.py  maps_driver.py
