[tool.poetry]
name = "black-owned-restaurants"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"
pandas = "^1.0.4"
selenium = "^3.141.0"
usaddress = "^0.5.10"

[tool.poetry.dev-dependencies]
notebook = "^6.0.3"
pytest = "^5.4.3"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
